--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/gwt-elemental-2.8.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/gwt-user"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/gwt-dev-2.8.1"/>
-	<classpathentry kind="output" path="out/production/gwt-elemental-test"/>
+	<classpathentry kind="con" path="com.gwtplugins.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
